# nem-buddy

./: .gitignore  README.md
core/: CMakeLists.txt
core/include/nem/: aemo_client.h  alerts.h  battery.h  config.h  fuel.h  history.h  oe_client.h  provision.h  proxy_auth.h  proxy_client.h  regions.h  snapshot.h  timefmt.h  timeutil.h
core/src/: aemo_client.c  alerts.c  battery.c  config.c  fuel.c  history.c  oe_client.c  provision.c  proxy_auth.c  proxy_client.c  regions.c  timefmt.c  timeutil.c
core/test/: test_aemo_client.c  test_alerts.c  test_battery.c  test_config.c  test_fuel.c  test_history.c  test_oe_client.c  test_provision.c  test_proxy_auth.c  test_proxy_client.c  test_regions.c  test_timefmt.c  test_timeutil.c
core/test/fixtures/: aemo_summary.json  oe_power_fueltech.json  proxy_sample.json
deploy/: RUNBOOK.md
deploy/k8s/: nem-proxy.yaml
docs/superpowers/plans/: 2026-07-10-nem-buddy-core-logic-library.md  2026-07-11-nem-buddy-board-bringup.md  2026-07-11-nem-buddy-live-data-pipeline.md  2026-07-12-nem-buddy-drill-in.md  2026-07-12-nem-buddy-wifi-provisioning.md  2026-07-14-authenticated-internet-proxy.md  2026-07-14-multi-client-derived-key-auth.md  2026-07-17-device-status-screen.md
docs/superpowers/specs/: 2026-07-10-nem-buddy-realtime-monitor-design.md  2026-07-12-nem-buddy-drill-in-design.md  2026-07-12-nem-buddy-wifi-provisioning-design.md  2026-07-14-multi-client-derived-key-auth-design.md  2026-07-14-nem-buddy-authenticated-internet-proxy-design.md  2026-07-17-device-status-screen-design.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/esp32_s3_touch_amoled_2_16/: README.md  esp32_s3_touch_amoled_2_16.c
firmware/components/nem_core/: CMakeLists.txt
firmware/main/: CMakeLists.txt  auth_counter.c  auth_counter.h  axp2101.c  axp2101.h  buttons.c  buttons.h  captive_dns.c  captive_dns.h  data_task.c  data_task.h  idf_component.yml  main.c  net_creds.c  net_creds.h  net_fetch.c  net_fetch.h  net_manager.c  net_manager.h  portal_http.c  portal_http.h  secrets.h.example  ui_dashboard.c  ui_dashboard.h  ui_drill.c  ui_drill.h  ui_setup.c  ui_setup.h  ui_status.c  ui_status.h  ui_theme.h  wifi_ctrl.c  wifi_ctrl.h  wifi_sta.c  wifi_sta.h
proxy/: .dockerignore  Dockerfile  nem_proxy.py  provision_device.py  test_auth.py
